@@ -3,19 +3,19 @@
     <head>
         <style>
             #content { -webkit-flow-into: flow; font: 50px/1 Ahem; }
-            #region { -webkit-flow-from: flow; position: absolute; top: 200px; width: 150px; height: 50px; overflow: hidden; }
+            #region { -webkit-flow-from: flow; position: absolute; top: 200px; width: 150px; overflow: hidden; }
         </style>
     </head>
-    <script src="../../resources/check-layout.js"></script>
+    <script src="../../../resources/check-layout.js"></script>
     <body onload="checkLayout('#region')">
         <p>Test for <a href="https://bugs.webkit.org/show_bug.cgi?id=105185"> [CSSRegions] RenderFlowThread should keep a count of auto height regions</a>.</p>
-        <p>The region height changes dynamically from define to auto.<p>
+        <p>The region height changes dynamically from auto to defined.<p>
         <p>On success, you should see PASS below.</p>
         <div id="content">a a a a a a</div>
-        <div id="region" data-expected-height=150></div>
+        <div id="region" data-expected-height=50></div>
         <script>
             document.body.offsetTop;
-            document.getElementById("region").style.height = "auto";
+            document.getElementById("region").style.height = "50px";
         </script>
     </body>
 </html>
